--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "com.rodvar.mvppet"
@@ -19,12 +25,19 @@ android {
     }
 }
 
+retrolambda {
+    jdk '/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home'
+//    jdk System.getenv("JAVA_8") // TODO this must be taken from env
+    oldJdk System.getenv("JAVA_7")
+    javaVersion JavaVersion.VERSION_1_7
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
 
-    //retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
+    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
 
     def nucleusVersion = '3.0.0'
     compile "info.android15.nucleus:nucleus:$nucleusVersion"
