--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -50,8 +51,8 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
 
-//    compile 'frankiesardo:icepick:3.2.0'
-//    apt 'frankiesardo:icepick-processor:3.2.0'
+    compile 'frankiesardo:icepick:3.2.0'
+    apt 'frankiesardo:icepick-processor:3.2.0'
 
     def supportVersion = '23.4.0'
     compile "com.android.support:recyclerview-v7:$supportVersion"
